--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/stack": "^7.0.6",
-    "expo": "~52.0.11",
-    "expo-av": "^15.0.1",
-    "expo-status-bar": "~2.0.0",
+    "expo": "~52.0.25",
+    "expo-av": "~15.0.2",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "^0.76.5",
+    "react-native": "^0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.2"
